--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
-<html>
-  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </header>
+    <main>
+        <h1>Hey there I,m Bunbee.<br>I'm a software developer</h1>
+        <p>I can help you build a product, feature or website. Look thrrough some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
+        <ul>
+            <li>github</li>
+            <li>LinkedIn</li>
+            <li>Twitter</li>
+        </ul>
+    </main>
+</body>
 </html>
