--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+        <ul class="nav-bar">
+            <li><a href="#">Porfolio</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">info</a></li>
         </ul>
     </header>
-    <main>
-        <h1>Hey there I,m Bunbee.<br>I'm a software developer</h1>
+    <main class="main-content">
+        <h1 class="heading">Hey there I,m Bunbee.<br>I'm a software developer</h1>
         <p>I can help you build a product, feature or website. Look thrrough some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
-        <ul>
-            <li>github</li>
-            <li>LinkedIn</li>
-            <li>Twitter</li>
+        <ul class="footer">
+            <li><a href="https://github.com/mutinhiri">github</a></li>
+            <li><a href="www.linkedin/mutinhiri">Linkedin</a></li>
+            <li><a href="twitter.com/bunbee">Twitter</a></li>
         </ul>
     </main>
 </body>
