--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1 class="heading">Hey there I,m Bunbee.<br> <span class="green">I'm a software developer</span></h1>
         <p>I can help you build a product, feature or website. Look thrrough some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
         <ul class="footer">
-            <li><a href="https://github.com/mutinhiri"><i class="fab fa-instagram""></i></a></li>
+            <li><a href="https://github.com/mutinhiri"><i class="fab fa-instagram"></i></a></li>
             <li><a href="www.linkedin/mutinhiri"><i class="fab fa-facebook-f"></i></a></li>
             <li><a href="twitter.com/bunbee"><i class="fab fa-github"></i></a></li>
             <li><a href="#"><i class="fab fa-twitter"></i></a></li>
