Fix errors in linters

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <p>I can help you build a product, feature or website. Look thrrough some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
         <ul class="footer">
             <li><a href="#"><img src="img/facebook.png" alt="facebook"></a></li>
-            <li><a href="#"><img src="img/instagram.png"></a></li>
-            <li><a href="#"><img src="img/linkedin.png"></a></li>
-            <li><a href="#"><img src="img/github.png"></a></li>
+            <li><a href="#"><img src="img/instagram.png" alt="instagram"></a></li>
+            <li><a href="#"><img src="img/linkedin.png" alt="linkedin"></a></li>
+            <li><a href="#"><img src="img/github.png" alt="github"></a></li>
         </ul>
     </main>
     
