--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body>
     <section>
         <nav class="nav">
-            <ul class="nav-bar">
+            <ul class="nav-bar" id="nav-bar">
                 <li><a href="#">Porfolio</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">info</a></li>
             </ul>
+            <p class="ham"><a href="#nav-bar"><img src="img/meat.png"></p><a></p>
          </nav>
         </section>
     <main class="main-content">
