--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">info</a></li>
             </ul>
-            <p><a href="#nav-bar"><img src="img/meat.png"></a></p>
+            <p><a href="#nav-bar"><img src="img/meat.png" alt="hamburger"></a></p>
          </nav>
         </section>
     <main class="main-content">
