--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+    </style>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="css/all.css">
-    <title>My Portfolio</title>
+    <title>Mobile Portfolio</title>
 </head>
 <body>
     <section>
-        <nav class="nav">
-            <ul class="nav-bar" id="nav-bar">
-                <li><a href="#">Porfolio</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">info</a></li>
-            </ul>
-            <p><a href="#nav-bar"><img src="img/meat.png" alt="hamburger"></a></p>
-         </nav>
-        </section>
-    <main class="main-content">
-        <h1 class="heading">Hey there I,m Bunbee.<br> <span class="green">I'm a software developer</span></h1>
-        <p>I can help you build a product, feature or website. Look thrrough some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
-        <ul class="footer">
-            <li><a href="#"><img src="img/facebook.png" alt="facebook"></a></li>
-            <li><a href="#"><img src="img/instagram.png" alt="instagram"></a></li>
-            <li><a href="#"><img src="img/linkedin.png" alt="linkedin"></a></li>
-            <li><a href="#"><img src="img/github.png" alt="github"></a></li>
-        </ul>
-    </main>
-    
-</body>
-</html>
+        <nav class="header">
+            <a class="logo" href="#">Bunbee</a>
+            <div class="hamb">
+                <a href="#"><img src="img/meat.png" alt="img"></a>
+            </div>
+        </nav>
+    </section>
+    <section class="welcome-section">
+       <div class="intro">
+           <h3 class="intro">I'm Bunbee<br>Glad to see<br> you!</h3>
+            <p>I'm a software devoloper! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
+            <p class="connect"><a href="#">LET'S CONNECT</a></p>
+       </div>
+       <ul class="social-media">
+           <li><a href="#"><img src="img/facebook.png" alt=""></a></li>
+           <li><a href="#"><img src="img/github.png" alt=""></a></li>
+           <li><a href="#"><img src="img/instagram.png" alt=""></a></li>
+           <li><a href="#"><img src="img/linkedin.png" alt=""></a></li>
+       </ul>
+    </section>
