--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
     <section>
         <nav class="header">
-            <a class="logo" href="#">Bunbee</a>
+            <p class="logo">Bunbee</p>
             <div class="hamb">
-                <a href="#"><img src="img/meat.png" alt="img"></a>
+                <a href="#"><img src="img/Union.png" alt="img"></a>
             </div>
         </nav>
     </section>
@@ -26,9 +27,11 @@
             <p class="connect"><a href="#">LET'S CONNECT</a></p>
        </div>
        <ul class="social-media">
+           <li><i class="fab fa-facebook-f"></i></li>
            <li><a href="#"><img src="img/facebook.png" alt=""></a></li>
            <li><a href="#"><img src="img/github.png" alt=""></a></li>
            <li><a href="#"><img src="img/instagram.png" alt=""></a></li>
            <li><a href="#"><img src="img/linkedin.png" alt=""></a></li>
+           <i class="fab fa-facebook-f"></i>
        </ul>
     </section>
