--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
-    <section>
+    <section class="">
         <nav class="header">
             <p class="logo">Bunbee</p>
             <div class="hamb">
@@ -23,15 +25,14 @@
     <section class="welcome-section">
        <div class="intro">
            <h3 class="intro">I'm Bunbee<br>Glad to see<br> you!</h3>
-            <p>I'm a software devoloper! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
+            <p class="card-text">I'm a software devoloper! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
             <p class="connect"><a href="#">LET'S CONNECT</a></p>
        </div>
        <ul class="social-media">
-           <li><i class="fab fa-facebook-f"></i></li>
-           <li><a href="#"><img src="img/facebook.png" alt=""></a></li>
-           <li><a href="#"><img src="img/github.png" alt=""></a></li>
-           <li><a href="#"><img src="img/instagram.png" alt=""></a></li>
-           <li><a href="#"><img src="img/linkedin.png" alt=""></a></li>
-           <i class="fab fa-facebook-f"></i>
+        <li class="fa fa-twitter fa-2x"></li>
+        <li class="fa fa-linkedin fa-2x"></li>
+        <li class="fa fa-medium fa-2x"></li>
+        <li class="fa fa-github fa-2x"></li>
+        <li class="fa fa-facebook fa-2x"></li>
        </ul>
     </section>
