--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        <div class="intro">
            <h3 class="intro">I'm Bunbee<br>Glad to see<br> you!</h3>
             <p class="card-text">I'm a software devoloper! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
-            <p class="connect"><a href="#">LET'S CONNECT</a></p>
+            <p class="connect">LET'S CONNECT</p>
        </div>
        <ul class="social-media">
         <li class="fa fa-twitter fa-2x"></li>
