--- a/index.html
+++ b/index.html
@@ -36,3 +36,67 @@
         <li class="fa fa-facebook fa-2x"></li>
        </ul>
     </section>
+
+    <section class="card-section">
+        <div class="card-image">
+            <img src="img/Snapshoot Portfolio(1).png" alt="first project">
+        </div>
+        <p class="card-header">Tonic</p>
+        <ul class="card-links">
+            <li>CANOPY</li>
+            <li> Black End Dev</li>
+            <li>2015</li>
+        </ul>
+        <p class="card-text">A daily selection of privately <br>personalised reads; no accounts or sign-ups required</p>
+        <div class="lang-section">
+           <ul class="card-lang">
+            <li>html</li>
+            <li>css</li>
+            <li>javaScript</li>
+           </ul>
+        </div>
+        <button class="btn1">See Project</button>
+
+    </section>
+
+    <section class="about-me">
+        <h1 class="about-header">About<br> Myself</h1>
+        <p class="about-para"> Hello I'm a software devoloper! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
+        <p class="connect">LET'S CONNECT</p>
+        <ul class="social-media">
+            <li class="fa fa-twitter fa-2x"></li>
+            <li class="fa fa-linkedin fa-2x"></li>
+            <li class="fa fa-medium fa-2x"></li>
+            <li class="fa fa-github fa-2x"></li>
+            <li class="fa fa-facebook fa-2x"></li>
+           </ul>
+        <button class=" btn1 btn2">Get my resume</button>
+        <h2>Languages</h2>
+        <ul class="langua">
+            <li>JavaScript</li>
+            <li>HTML</li>
+            <li>CSS</li>
+        </ul>
+        <h2>Frameworks</h2>
+        <ul>
+            <li>tool1</li>
+            <li>tool2</li>
+            <li>tool3</li>
+        </ul>
+        <h2>Skills</h2>
+        <ul>
+            <li>skill1</li>
+            <li>skill2</li>
+            <li>skill3</li>
+        </ul>
+    </section>
+    <section>
+        <p>Contact me</p>
+        <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I'd love to help with it</p>
+        <input type="text"><br>
+        <input type="text"><br>
+        <textarea name="text" cols="30" rows="10"></textarea>
+        <p>Get in Touch</p>
+    </section>
+</body>
+</html>
