--- a/index.html
+++ b/index.html
@@ -71,32 +71,41 @@
             <li class="fa fa-facebook fa-2x"></li>
            </ul>
         <button class=" btn1 btn2">Get my resume</button>
-        <h2>Languages</h2>
+        <h2 class="item-header">Languages</h2>
         <ul class="langua">
-            <li>JavaScript</li>
-            <li>HTML</li>
-            <li>CSS</li>
+            <li class="lang-item">
+                <img src="img/Ellipse 1.png" alt="lang-icons">
+                <p>JavaScript</p>
+            </li>
+            <li class="lang-item">
+                <img src="img/Ellipse 1(1).png" alt="lang">
+                <p>HTML</p>
+            </li>
+            <li class="lang-item">
+                <img src="img/Ellipse 1(2).png" alt="lang"> 
+                <p>CSS</p> 
+            </li>
         </ul>
-        <h2>Frameworks</h2>
+        <h2 class="item-header">Frameworks</h2>
         <ul>
             <li>tool1</li>
             <li>tool2</li>
             <li>tool3</li>
         </ul>
-        <h2>Skills</h2>
+        <h2 class="item-header">Skills</h2>
         <ul>
             <li>skill1</li>
             <li>skill2</li>
             <li>skill3</li>
         </ul>
     </section>
-    <section>
-        <p>Contact me</p>
-        <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I'd love to help with it</p>
-        <input type="text"><br>
-        <input type="text"><br>
-        <textarea name="text" cols="30" rows="10"></textarea>
-        <p>Get in Touch</p>
+    <section class="contact">
+        <p class="contact-header">Contact me</p>
+        <p class="contact-text">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I'd love to help with it</p>
+        <input class="contact-input" type="text" value="Mafuta"><br><br>
+        <input class="contact-input" type="text" value="email@adress.com"><br><br>
+        <textarea class="contact-input" name="text" placeholder="write your message here" cols="30" rows="10"></textarea>
+        <button class="btn1">Get in Touch</button>
     </section>
 </body>
 </html>
