--- a/index.html
+++ b/index.html
@@ -59,7 +59,27 @@
     </section>
     <section class="card-section">
         <div class="card-image">
-            <img src="img/Snapshoot Portfolio(1).png" alt="first project">
+            <img src="img/Snapshoot Portfolio(2).png" alt="first project">
+        </div>
+        <p class="card-header">Multi-Post<br> Stories</p>
+        <ul class="card-links">
+            <li>CANOPY</li>
+            <li> Black End Dev</li>
+            <li>2015</li>
+        </ul>
+        <p class="card-text">A daily selection of privately <br>personalised reads; no accounts or sign-ups required</p>
+        <div class="lang-section">
+           <ul class="card-lang">
+            <li>html</li>
+            <li>css</li>
+            <li>javaScript</li>
+           </ul>
+        </div>
+        <button class="btn1">See Project</button>
+    </section>
+    <section class="card-section">
+        <div class="card-image">
+            <img src="img/Snapshoot Portfolio(3).png" alt="first project">
         </div>
         <p class="card-header">Tonic</p>
         <ul class="card-links">
@@ -79,29 +99,9 @@
     </section>
     <section class="card-section">
         <div class="card-image">
-            <img src="img/Snapshoot Portfolio(1).png" alt="first project">
+            <img src="img/Snapshoot Portfolio(4).png" alt="first project">
         </div>
-        <p class="card-header">Tonic</p>
-        <ul class="card-links">
-            <li>CANOPY</li>
-            <li> Black End Dev</li>
-            <li>2015</li>
-        </ul>
-        <p class="card-text">A daily selection of privately <br>personalised reads; no accounts or sign-ups required</p>
-        <div class="lang-section">
-           <ul class="card-lang">
-            <li>html</li>
-            <li>css</li>
-            <li>javaScript</li>
-           </ul>
-        </div>
-        <button class="btn1">See Project</button>
-    </section>
-    <section class="card-section">
-        <div class="card-image">
-            <img src="img/Snapshoot Portfolio(1).png" alt="first project">
-        </div>
-        <p class="card-header">Tonic</p>
+        <p class="card-header">Multi-Post<br>Stories</p>
         <ul class="card-links">
             <li>CANOPY</li>
             <li> Black End Dev</li>
