Fix linter errors

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section class="card-section">
         <div class="card-image">
-            <img src="img/Snapshoot Portfolio(1).png" alt="first project">
+            <img src="img/SnapshootPortfolio(1).png" alt="firstproject">
         </div>
         <p class="card-header">Tonic</p>
         <ul class="card-links">
@@ -59,7 +59,7 @@
     </section>
     <section class="card-section">
         <div class="card-image">
-            <img src="img/Snapshoot Portfolio(2).png" alt="first project">
+            <img src="img/SnapshootPortfolio(2).png" alt="firsroject">
         </div>
         <p class="card-header">Multi-Post<br> Stories</p>
         <ul class="card-links">
@@ -79,7 +79,7 @@
     </section>
     <section class="card-section">
         <div class="card-image">
-            <img src="img/Snapshoot Portfolio(3).png" alt="first project">
+            <img src="img/SnapshootPortfolio(3).png" alt="firsproject">
         </div>
         <p class="card-header">Tonic</p>
         <ul class="card-links">
@@ -99,7 +99,7 @@
     </section>
     <section class="card-section">
         <div class="card-image">
-            <img src="img/Snapshoot Portfolio(4).png" alt="first project">
+            <img src="img/SnapshootPortfolio(4).png" alt="firstoject">
         </div>
         <p class="card-header">Multi-Post<br>Stories</p>
         <ul class="card-links">
@@ -134,15 +134,15 @@
         <h2 class="item-header">Languages</h2>
         <ul class="langua">
             <li class="lang-item">
-                <img src="img/Ellipse 1.png" alt="lang-icons">
+                <img src="img/Ellipse1.png" alt="lang-icons">
                 <p>JavaScript</p>
             </li>
             <li class="lang-item">
-                <img src="img/Ellipse 1(1).png" alt="lang">
+                <img src="img/Ellipse1(1).png" alt="lang">
                 <p>HTML</p>
             </li>
             <li class="lang-item">
-                <img src="img/Ellipse 1(2).png" alt="lang"> 
+                <img src="img/Ellipse1(2).png" alt="lang"> 
                 <p>CSS</p> 
             </li>
         </ul>
