Update display properties

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css">
 </head>
 <body>
+   <div class="first-page">
     <section class="">
         <nav class="header">
             <p class="logo">Bunbee</p>
@@ -34,7 +35,8 @@
         <li class="fa fa-facebook fa-2x"></li>
        </ul>
     </section>
-
+   </div>
+   <div class="project-section">
     <section class="card-section">
         <div class="card-image">
             <img src="img/SnapshootPortfolio(1).png" alt="firstproject">
@@ -115,8 +117,8 @@
         </div>
         <button class="btn1">See Project</button>
     </section>
-
-
+   </div>
+   <div class="about-section">
     <section class="about-me">
         <h1 class="about-header">About<br> Myself</h1>
         <p class="about-para"> Hello I'm a software devoloper! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
@@ -184,5 +186,7 @@
         <textarea class="contact-input" name="text" placeholder="write your message here" cols="30" rows="10"></textarea>
         <button class="btn1 btn3">Get in Touch</button>
     </section>
+   </div>
+    
 </body>
 </html>
