Change the card-lang class in css file

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <p class="card-text">A daily selection of privately <br>personalised reads; no accounts or sign-ups required</p>
         <div class="lang-section">
            <ul class="card-lang">
-            <li>html</li>
-            <li>css</li>
-            <li>javaScript</li>
+            <li class="html">html</li>
+            <li class="css">css</li>
+            <li class="javascript">javaScript</li>
            </ul>
         </div>
         <button class="btn1">See Project</button>
