--- a/index.html
+++ b/index.html
@@ -176,14 +176,19 @@
             </li>
         </ul>
     </section>
-    <section class="contact">
+
+    <footer class="contact">
         <p class="contact-header">Contact me</p>
         <p class="contact-text">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I'd love to help with it</p>
-        <input class="contact-input" type="text" value="Mafuta"><br><br>
-        <input class="contact-input" type="text" value="email@adress.com"><br><br>
-        <textarea class="contact-input" name="text" placeholder="write your message here" cols="30" rows="10"></textarea>
+        <form action="">
+        <input class="contact-input" type="text" placeholder="Enter name here" maxlength="30">
+        <input class="contact-input" type="email" value="Enter email address here">
+        <textarea class="contact-input" name="text" maxlength="500" placeholder="write your message here" cols="30" rows="10"></textarea>
         <button class="btn1 btn3">Get in Touch</button>
-    </section>
+        </form>
+        
+    </footer>
+
    </div>
     
 </body>
