--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
     <footer class="contact">
         <p class="contact-header">Contact me</p>
         <p class="contact-text">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I'd love to help with it</p>
-        <form action="">
-        <input class="contact-input" type="text" placeholder="Enter name here" maxlength="30">
-        <input class="contact-input" type="email" value="Enter email address here">
-        <textarea class="contact-input" name="text" maxlength="500" placeholder="write your message here" cols="30" rows="10"></textarea>
+        <form class="contact-form" action="" method="POST">
+        <input class="contact-input" type="text" placeholder="Enter name here" maxlength="30" required>
+        <input class="contact-input" type="email" value="Enter email address here" required>
+        <textarea class="contact-input" name="text" maxlength="500" placeholder="write your message here" cols="30" rows="10" required></textarea>
         <button class="btn1 btn3">Get in Touch</button>
         </form>
         
