--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
         <input class="contact-input" type="text" name="name-input" placeholder="Enter name here" maxlength="30" required>
         <input class="contact-input" type="email" placeholder="Enter email address here" name="email-input" required>
         <textarea class="contact-input" name="textarea-input" maxlength="500" placeholder="write your message here" cols="30" rows="10" required></textarea>
-        <button class="btn1 btn3">Get in Touch</button>
+        <button class="btn1 btn3">
+            <span class="btn-text">Get in Touch</span>
+        </button>
         </form>
         
     </footer>
