--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
     </style>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
@@ -184,8 +184,8 @@
         <input class="contact-input" type="text" name="name-input" placeholder="Enter name here" maxlength="30" required>
         <input class="contact-input" type="email" placeholder="Enter email address here" name="email-input" required>
         <textarea class="contact-input" name="textarea-input" maxlength="500" placeholder="write your message here" cols="30" rows="10" required></textarea>
-        <button class="btn1 btn3">
-            <span class="btn-text">Get in Touch</span>
+        <button class="btn3">
+            <span class="btn-text">Get it Touch</span>
         </button>
         </form>
         
