--- a/index.html
+++ b/index.html
@@ -12,16 +12,24 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css">
 </head>
 <body>
+
    <div class="first-page">
+
     <section class="">
         <nav class="header">
             <p class="logo">Bunbee</p>
-            <a href="#"><img src="img/Union.png" alt="img"></a>
+            <ul class="link-items">
+                <li>Portfolio</li>
+                <li>About</li>
+                <li>contact</li>
+            </ul>
+            <a  class="hamburger" href="#"><img src="img/Union.png" alt="img"></a>
         </nav>
     </section>
+
     <section class="welcome-section">
        <div class="intro">
-           <h3 class="intro">I'm Bunbee<br>Glad to see<br> you!</h3>
+           <h3 class="intro1">I'm Bunbee<br>Glad to see you!</h3>
             <p class="card-text">I'm a software devoloper! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
             <p class="connect">LET'S CONNECT</p>
        </div>
@@ -34,12 +42,14 @@
        </ul>
     </section>
    </div>
+
    <div class="project-section">
     <section class="card-section">
-        <div class="card-image">
+        <section class="card-image">
             <img src="img/SnapshootPortfolio(1).png" alt="firstproject">
-        </div>
-        <h2 class="card-header">Tonic</h2>
+        </section>
+        <section class="section-content">
+            <h2 class="card-header">Tonic</h2>
         <ul class="card-links">
             <li>CANOPY</li>
             <li> Black End Dev</li>
@@ -54,7 +64,9 @@
            </ul>
         </div>
         <button class="btn1">See Project</button>
+        </section>
     </section>
+
     <section class="card-section">
         <div class="card-image">
             <img src="img/SnapshootPortfolio(2).png" alt="firsroject">
