--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    <div class="project-section">
     <section class="card-section">
         <section class="card-image">
-            <img src="img/SnapshootPortfolio(1).png" alt="firstproject">
+            <img class="img-card" src="img/SnapshootPortfolio(1).png" alt="firstproject">
         </section>
         <section class="section-content">
             <h2 class="card-header">Tonic</h2>
@@ -63,35 +63,65 @@
             <li>javaScript</li>
            </ul>
         </div>
-        <button class="btn1">See Project</button>
+
+        <button class="bt6 ">See Project</button>
+        </section>
+    </section>
+
+    <div class="project-section">
+        <section class="card-section">
+            <section class="card-image rev">
+                <img class="img-card" src="img/SnapshootPortfolio(2).png" alt="firsroject">
+            </section>
+            <section class="section-content">
+                <h2 class="card-header">Multi-Post<br> Stories</h2>
+                <ul class="card-links">
+                    <li>CANOPY</li>
+                    <li> Black End Dev</li>
+                    <li>2015</li>
+                </ul>
+                <p class="card-text">A daily selection of privately <br>personalised reads; no accounts or sign-ups required</p>
+                <div class="lang-section">
+                   <ul class="card-lang">
+                    <li class="html">html</li>
+                    <li class="css">css</li>
+                    <li class="javascript">javaScript</li>
+                   </ul>
+                </div>
+                <button class="bt6">See Project</button>
+            </section>
+        </section>
+    </div>
+
+    <section class="card-section">
+        <section class="card-image">
+            <img class="img-card" src="img/SnapshootPortfolio(3).png" alt="firsproject">
+        </section>
+        <section class="section-content">
+            <h2 class="card-header">Tonic</h2>
+            <ul class="card-links">
+                <li>CANOPY</li>
+                <li> Black End Dev</li>
+                <li>2015</li>
+            </ul>
+            <p class="card-text">A daily selection of privately <br>personalised reads; no accounts or sign-ups required</p>
+            <div class="lang-section">
+               <ul class="card-lang">
+                <li>html</li>
+                <li>css</li>
+                <li>javaScript</li>
+               </ul>
+            </div>
+            <button class="bt6">See Project</button>
         </section>
     </section>
 
     <section class="card-section">
-        <div class="card-image">
-            <img src="img/SnapshootPortfolio(2).png" alt="firsroject">
-        </div>
-        <h2 class="card-header">Multi-Post<br> Stories</h2>
-        <ul class="card-links">
-            <li>CANOPY</li>
-            <li> Black End Dev</li>
-            <li>2015</li>
-        </ul>
-        <p class="card-text">A daily selection of privately <br>personalised reads; no accounts or sign-ups required</p>
-        <div class="lang-section">
-           <ul class="card-lang">
-            <li class="html">html</li>
-            <li class="css">css</li>
-            <li class="javascript">javaScript</li>
-           </ul>
-        </div>
-        <button class="btn1">See Project</button>
-    </section>
-    <section class="card-section">
-        <div class="card-image">
-            <img src="img/SnapshootPortfolio(3).png" alt="firsproject">
-        </div>
-        <h2 class="card-header">Tonic</h2>
+        <section class="card-image rev">
+            <img class="img-card" src="img/SnapshootPortfolio(4).png" alt="firstoject">
+        </section>
+        <section class="section-content">
+            <h2 class="card-header">Multi-Post<br>Stories</h2>
         <ul class="card-links">
             <li>CANOPY</li>
             <li> Black End Dev</li>
@@ -105,27 +135,8 @@
             <li>javaScript</li>
            </ul>
         </div>
-        <button class="btn1">See Project</button>
-    </section>
-    <section class="card-section">
-        <div class="card-image">
-            <img src="img/SnapshootPortfolio(4).png" alt="firstoject">
-        </div>
-        <h2 class="card-header">Multi-Post<br>Stories</h2>
-        <ul class="card-links">
-            <li>CANOPY</li>
-            <li> Black End Dev</li>
-            <li>2015</li>
-        </ul>
-        <p class="card-text">A daily selection of privately <br>personalised reads; no accounts or sign-ups required</p>
-        <div class="lang-section">
-           <ul class="card-lang">
-            <li>html</li>
-            <li>css</li>
-            <li>javaScript</li>
-           </ul>
-        </div>
-        <button class="btn1">See Project</button>
+        <button class="bt6">See Project</button>
+        </section>
     </section>
    </div>
    <div class="about-section">
