Added html semantics

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p class="card-text">I'm a software devoloper! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
             <p class="connect">LET'S CONNECT</p>
        </div>
-       <ul class="social-media">
+       <ul class="soshari-media social-media">
         <li class="fa fa-twitter fa-2x"></li>
         <li class="fa fa-linkedin fa-2x"></li>
         <li class="fa fa-medium fa-2x"></li>
@@ -139,8 +139,10 @@
         </section>
     </section>
    </div>
+
    <div class="about-section">
     <section class="about-me">
+       <div class="about1">
         <h1 class="about-header">About<br> Myself</h1>
         <p class="about-para"> Hello I'm a software devoloper! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
         <p class="connect">LET'S CONNECT</p>
@@ -153,6 +155,7 @@
            </ul>
         <button class=" btn1 btn2">Get my resume</button>
 
+       </div>
         <ul class="tools">
             <li>
                 <div class="lang-arrow">
