--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <h3>Frameworks</h3>
                     <i class="fa fa-angle-right fa-2x la"></i>
                 </div>
-                <ul>
+                <ul class="hide">
                     <li>frame1</li>
                     <li>frame2</li>
                     <li>frame3</li>
@@ -194,7 +194,7 @@
                     <h3>Skills</h3>
                     <i class="fa fa-angle-right fa-2x la"></i>
                 </div>
-                <ul>
+                <ul class="hide">
                     <li>Skill1</li>
                     <li>Skill2</li>
                     <li>Skill3</li>
