--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     </section>
    </div>
 
-   <div class="project-section">
     <section class="card-section">
         <section class="card-image">
             <img class="img-card" src="img/SnapshootPortfolio(1).png" alt="firstproject">
@@ -64,7 +63,7 @@
            </ul>
         </div>
 
-        <button class="bt6 ">See Project</button>
+        <button class=" btn1 bt6 ">See Project</button>
         </section>
     </section>
 
@@ -88,7 +87,7 @@
                     <li class="javascript">javaScript</li>
                    </ul>
                 </div>
-                <button class="bt6">See Project</button>
+                <button class="btn1 bt6">See Project</button>
             </section>
         </section>
     </div>
@@ -104,7 +103,7 @@
                 <li> Black End Dev</li>
                 <li>2015</li>
             </ul>
-            <p class="card-text">A daily selection of privately <br>personalised reads; no accounts or sign-ups required</p>
+            <h2 class="card-text">A daily selection of privately personalised reads; no accounts or sign-ups required</h2>
             <div class="lang-section">
                <ul class="card-lang">
                 <li>html</li>
@@ -112,7 +111,7 @@
                 <li>javaScript</li>
                </ul>
             </div>
-            <button class="bt6">See Project</button>
+            <button class="btn1 bt6">See Project</button>
         </section>
     </section>
 
@@ -127,7 +126,7 @@
             <li> Black End Dev</li>
             <li>2015</li>
         </ul>
-        <p class="card-text">A daily selection of privately <br>personalised reads; no accounts or sign-ups required</p>
+        <p class="card-text">A daily selection of privately personalised reads; no accounts or sign-ups required</p>
         <div class="lang-section">
            <ul class="card-lang">
             <li>html</li>
@@ -135,7 +134,7 @@
             <li>javaScript</li>
            </ul>
         </div>
-        <button class="bt6">See Project</button>
+        <button class="bt6 btn1">See Project</button>
         </section>
     </section>
    </div>
@@ -216,8 +215,5 @@
         </form>
         
     </footer>
-
-   </div>
-    
 </body>
 </html>
