--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
     </style>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -150,15 +150,15 @@
                 
                 <ul class=langua>
                     <li class="lang-item">
-                        <img src="img/Ellipse1.png" alt="lang">
+                        <img class="ipin" src="img/Ellipse1.png" alt="lang">
                         <p>JavaScript</p>
                     </li>
                     <li class="lang-item">
-                        <img src="img/Ellipse1(1).png" alt="lang">
+                        <img class="ipin" src="img/Ellipse1(1).png" alt="lang">
                         <p>HTML</p>
                     </li>
                     <li class="lang-item">
-                        <img src="img/Ellipse1(2).png" alt="lang"> 
+                        <img class="ipin" src="img/Ellipse1(2).png" alt="lang"> 
                         <p>CSS</p> 
                     </li>
                 </ul>
