--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
         </section>
         <section>
             <form class="contact-form" action="https://formspree.io/f/mleaokev" method="POST">
-                <input class="contact-input" type="text" name="name-input" placeholder="Enter name here" maxlength="30" required>
-                <input class="contact-input" type="email" placeholder="Enter email address here" name="email-input" required>
-                <textarea class="contact-input" name="textarea-input" maxlength="500" placeholder="write your message here" cols="30" rows="10" required></textarea>
-                <button class="btn3 rty">
+                <input class="contact-input" type="text" name="name-input" placeholder="Enter name here" maxlength="30" required><br>
+                <input class="contact-input" type="email" placeholder="Enter email address here" name="email-input" required><br>
+                <textarea class="contact-input" name="textarea-input" maxlength="500" placeholder="write your message here" cols="30" rows="10" required></textarea><br>
+                <button class="btn3 rty btn1">
                      <span class="btn-text">Get it Touch</span>
                 </button>
                 </form>
