--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="">
         <nav class="header">
             <p class="logo">Bunbee</p>
-            <a class="hamburger" href="#"><img src="img/Union.png" alt="img"></a>
+            <a class="hamburger" href="#"><img src="img/Union.png" alt="drop-down menu"></a>
             <ul class="link-items">
                 <li>Portfolio</li>
                 <li>About</li>
@@ -44,7 +44,7 @@
    
     <section class="card-section">
         <section class="card-image">
-            <img class="img-card" src="img/SnapshootPortfolio(1).png" alt="firstproject">
+            <img class="img-card" src="img/SnapshootPortfolio(1).png" alt="first project card">
         </section>
         <section class="card-para">
             <h2 class="card-header">Tonic</h2>
@@ -66,7 +66,7 @@
 
     <section class="card-section">
         <section class="card-image se">
-            <img class="img-card" src="img/SnapshootPortfolio(2).png" alt="firsroject">
+            <img class="img-card" src="img/SnapshootPortfolio(2).png" alt="second project">
         </section>
         <section class="card-para">
             <h2 class="card-header">Multi-Post<br> Stories</h2>
@@ -87,7 +87,7 @@
 
     <section class="card-section">
         <section class="card-image">
-            <img class="img-card" src="img/SnapshootPortfolio(3).png" alt="firsproject">
+            <img class="img-card" src="img/SnapshootPortfolio(3).png" alt="third project">
         </section>
         <section>
             <h2 class="card-header">Tonic</h2>
@@ -108,7 +108,7 @@
 
     <section class="card-section">
         <section class="card-image se">
-            <img class="img-card " src="img/SnapshootPortfolio(4).png" alt="firstoject">
+            <img class="img-card " src="img/SnapshootPortfolio(4).png" alt="fourth project">
         </section>
         <section>
             <h2 class="card-header">Multi-Post<br>Stories</h2>
@@ -128,7 +128,7 @@
     </section>
     <section class="about-me">
        <section class="about-first">
-            <h1 class="about-header">About<br> Myself</h1>
+            <h2 class="about-header">About<br> Myself</h2>
             <p class="about-para"> Hello I'm a software devoloper! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
             <p class="connect">LET'S CONNECT</p>
             <ul class="social-media">
