--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Portfolio</title>
+    <title>Mutinhiri's Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css">
 </head>
 <body>
@@ -27,7 +27,7 @@
     </section>
     <section class="welcome-section">
        <div class="intro">
-           <h3 class="intro1">I'm Bunbee<br>Glad to see you!</h3>
+           <h1 class="intro1">I'm Bunbee<br>Glad to see you!</h1>
             <p class="card-text">I'm a software devoloper! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, dont hesitate to contact me.</p>
             <p class="connect">LET'S CONNECT</p>
        </div>
