Add header hierachy

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
    <div class="first-page">
-    <section class="">
+    <section class="welcome-page">
         <nav class="header">
             <p class="logo">Bunbee</p>
             <a class="hamburger" href="#"><img src="img/Union.png" alt="drop-down menu"></a>
