Add hamburger icon

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="welcome-page">
         <nav class="header">
             <p class="logo">Bunbee</p>
-            <a class="hamburger" href="#"><img src="img/Union.png" alt="drop-down menu"></a>
+            <a class="hamburger" href="#"><img src="img/Union.png" alt="drop-down menu" id="burger"></a>
             <ul class="link-items">
                 <li>Portfolio</li>
                 <li>About</li>
