Add menu toggle to mobile menu
Add html elements for mobile menu
Add style to our mobile menu elements
Add js file for hamburger menu toggle

--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
                 <li>About</li>
                 <li>Contact</li>
             </ul>
+            <button class="ham">
+                <span class="menuIcon">
+                  
+                </span>
+                <span class="xIcon">
+                  
+                </span>
+              </button>
+              <ul class="menu">
+                <li><a class="menuLink" href="#">Portfolio</a></li>
+                <li><a class="menuLink" href="#">About</a></li>
+                <li><a class="menuLink" href="#">Contact</a></li>
+              </ul>
         </nav>
     </section>
     <section class="welcome-section">
