Fix linter errors

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             </ul>
             <button class="ham" type="button">
                 <span class="menuIcon">
-                    <a class="hamburger" href="#"><img src="img/Union.png" alt="drop-down menu" id="burger"></a>
+                    <div class="hamburger" href="#"><img src="img/Union.png" alt="drop-down menu" id="burger"></div>
                 </span>
                 <span class="xIcon">
-                  <a class="x" href="#"><img src="img/xIcon.svg" alt="x icon"></a>
+                  <div class="x" href="#"><img src="img/xIcon.svg" alt="x icon"></div>
                 </span>
               </button>
               <ul class="menu">
