--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
             <button class="ham" type="button">
                 <span class="menuIcon">
-                    <div class="hamburger" href="#"><img src="img/Union.png" alt="drop-down menu" id="burger"></div>
+                    <i class="hamburger" href="#"><img src="img/Union.png" alt="drop-down menu" id="burger"></i>
                 </span>
                 <span class="xIcon">
                   <div class="x" href="#"><img src="img/xIcon.svg" alt="x icon"></div>
