Fix linter error

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             </ul>
             <button class="ham" type="button">
                 <span class="menuIcon">
-                    <i class="hamburger" href="#"><img src="img/Union.png" alt="drop-down menu" id="burger"></i>
+                    <i class="hamburger"><img src="img/Union.png" alt="drop-down menu" id="burger"></i>
                 </span>
                 <span class="xIcon">
-                  <div class="x" href="#"><img src="img/xIcon.svg" alt="x icon"></div>
+                  <i class="x" ><img src="img/xIcon.svg" alt="x icon"></i>
                 </span>
               </button>
               <ul class="menu">
