--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <li> Black End Dev</li>
                 <li>2015</li>
             </ul>
+            <img src="img/Snapshoot Portfolio.png" alt="">
             <p class="card-text">A daily selection of privately personalised reads; no accounts or sign-ups required</p>
             <ul class="card-lang">
                 <li>Html</li>
