--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h1 class="title" id="modalTitle"></h1>
                 <button data-close-button class="close-button">&times;</button>
                </div>
-               <div class="modal-header-second" id="">
+               <div class="modal-header-second">
                    <ul class="modal-header-links">
                        <li>Canopy</li>
                        <li>Black End Dev</li>
@@ -91,12 +91,12 @@
                 </div>
             </div>
             <div class="modal-image" id="imaghe">
-                <img id="modalImg" alt="popup-image">
+                <img id="modalImg" alt="popup-image" src="m">
             </div>
             <div class="modal-body">
                 <p id="modalDesc"></p>
             </div>
-            <div class="modal-footer" id="">
+            <div class="modal-footer">
                 <ul class="mobile-header-links card-lang" >
                     <li>html</li>
                     <li>css</li>
