Fix linter errors

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                     <li>javascript</li>
                 </ul>
                 <div class="footer-container">
-                    <button class="see-source" id="modalBtn1"> See source &nbsp; </button>
-                    <button class="see-live" id="modalBtn2">See live &nbsp; </button>
+                    <button class="see-source btn1" id="modalBtn1"> See source &nbsp; </button>
+                    <button class="see-live btn1" id="modalBtn2">See live &nbsp; </button>
                 </div>
             </div>
         </div>
