--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <input class="contact-input" id="contact-name" type="text" name="name-input" placeholder="Enter name here" maxlength="30" required><br>
                 <input class="contact-input" id="contact-email" type="email" placeholder="Enter email address here" name="email-input" required><br>
                 <textarea class="contact-input" name="textarea-input" maxlength="500" placeholder="write your message here" cols="30" rows="10" required></textarea><br>
-                <small class="inter-font" id="email-error"></small>
+                <small class="inter-font" id="email-error"></small><br>
                 <button class="btn3 rty btn1" type="submit">Get it Touch</button>        
                 </form>
                 
