--- a/index.html
+++ b/index.html
@@ -79,22 +79,20 @@
         <div class="modal" id="Mymodal">
             <div class="modal-header">
                <div class="modal-header-first">
-                <h1 class="title" id="modalTitle"></h1>
+                <h1 class="modal-title" id="modalTitle"></h1>
                 <button data-close-button class="close-button">&times;</button>
                </div>
-               <div class="modal-header-second">
-                   <ul class="modal-header-links">
-                       <li>Canopy</li>
-                       <li>Black End Dev</li>
-                       <li>2015</li>
-                   </ul>
-                </div>
+                <ul class="modal-header-links">
+                    <li>Canopy</li>
+                    <li>Black End Dev</li>
+                    <li>2015</li>
+                </ul>
             </div>
             <div class="modal-image" id="imaghe">
                 <img id="modalImg" alt="popup-image" src="m">
             </div>
             <div class="modal-body">
-                <p id="modalDesc"></p>
+                <p class="modal-para" id="modalDesc"></p>
             </div>
             <div class="modal-footer">
                 <ul class="mobile-header-links card-lang" >
@@ -103,7 +101,10 @@
                     <li>javascript</li>
                 </ul>
                 <div class="footer-container">
-                    <button class="see-source btn1" id="modalBtn1"> See source &nbsp; </button>
+                    <button class="see-source btn1" id="modalBtn1"> 
+                        See source  
+                        <i class=" fas fa-chart-line"></i>
+                    </button>
                     <button class="see-live btn1" id="modalBtn2">See live &nbsp; </button>
                 </div>
             </div>
