Final mobile site

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p class="modal-para" id="modalDesc"></p>
             </div>
             <div class="modal-footer">
-                <ul class="mobile-header-links card-lang" >
+                <ul class="mobile-header-lnks card-lang" >
                     <li>html</li>
                     <li>css</li>
                     <li>javascript</li>
